Work on emoji popup

--- a/src/scss/core/_emoji.scss
+++ b/src/scss/core/_emoji.scss
@@ -13,7 +13,7 @@
     background-image: url('../../sheet_apple_64.png');
     background-size: 820px;
     background-repeat: no-repeat;
-    text-indent: -999px;
+    // text-indent: -999px;
     // padding-left: 20px;
     box-sizing: border-box;
     // For emoji fallback
