Emoji popup behavior relatively sane

--- a/src/scss/core/_styles.scss
+++ b/src/scss/core/_styles.scss
@@ -1,9 +1,5 @@
 @import './variables';
 
-#quill-editor {
-    position: relative;
-}
-
 .mention {
     color: $blue;
 }
@@ -107,13 +103,17 @@
     line-height: 0;
     vertical-align: middle;
 }
-#emoji-palette {
+.emoji-palette {
     position: absolute;
     max-width: 250px;
     z-index: 999;
     box-shadow: 0 5px 10px rgba(0,0,0,.12);
     border-radius: 3px;
     border: 1px solid rgba(0,0,0,.15);
+}
+.ap.bem {
+  width: 30px;
+  height: 30px;
 }
 .bem {
     font-size: 24px;
@@ -122,9 +122,9 @@
     text-align: center;
     cursor: pointer;
     margin:2px;
-
+    pointer-events: auto;
 }
-#tab-filters {
+.tab-filters {
     width: 210px;
     margin: 0px auto;
     margin-top: 20px;
@@ -136,20 +136,21 @@
     height: 100%;
     min-height: 30px;
     cursor: pointer;
+    pointer-events: auto;
 }
-#tab-toolbar {
+.tab-toolbar {
     background-color: #f7f7f7;
     padding: 4px 4px 0;
     border-bottom: 1px solid rgba(0,0,0,.15);
 }
-#tab-toolbar ul{
+.tab-toolbar ul{
     margin:0px;
     padding:0px;
 }
-#tab-toolbar .active {
+.tab-toolbar .active {
     border-bottom: 3px solid #2ab27b;
 }
-#tab-panel {
+.tab-panel {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -157,23 +158,8 @@
     overflow-y: scroll;
     padding: 2px;
     background: $white;
+    padding: 12px 0;
 
-}
-
-#quill-editor x-contain, contain {
-  background: #ffbb88;
-  display: block;
-}
-
-#quill-editor table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-#quill-editor table td {
-  border: 1px solid black;
-  padding: 5px;
-  height: 25px;
 }
 
 button.ql-table::after { content: "TABLE"; }
@@ -187,12 +173,13 @@ button.ql-table[value="append-col"]::after { content: "COLS+"; }
   width: auto !important;
   margin-right: -15px;
 }
-#emoji-close-div{
+.emoji-close-div{
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    pointer-events: auto;
 }
 
 .textarea-emoji-control{
@@ -203,7 +190,7 @@ button.ql-table[value="append-col"]::after { content: "COLS+"; }
   cursor: pointer;
   pointer-events: auto;
 }
-#textarea-emoji {
+.textarea-emoji {
   position: absolute;
   right:12px;
   top:48px;
