--- a/src/scss/core/_styles.scss
+++ b/src/scss/core/_styles.scss
@@ -44,10 +44,9 @@
 .emoji_completions {
     list-style: none;
     margin: 0;
-    border: 1px solid rgba(0,0,0,.15);
+    background-color: var(--panel-background-color);
+    border-radius: 6px;
     padding: 6px;
-    background: $white;
-    border-radius: 3px;
     box-shadow: 0 5px 10px rgba(0,0,0,.12);
 
     li {
@@ -64,37 +63,47 @@
 }
 
 
+.emoji_completions > li {
+  margin: 5px;
+}
 
 .emoji_completions > li > button {
     box-sizing: border-box;
-    padding: 3px 2px 6px;
-    margin: 0;
+    padding: 8px 14px;
     display: block;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    outline-style: none;
+    border: 0;
+    border-radius: 4px;
+    color: var(--canvas-overlay-text-color);
+    font-weight: var(--canvas-overlay-item-text-weight);
+    font-size: var(--canvas-overlay-text-size);
+    line-height: calc(var(--canvas-overlay-text-size) + 2px);
+    text-shadow: 0px 0px 4px var(--menu-shadow-color);
+    background-color: var(--panel-item-selected-background-color);
+    font-family: Lato, Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     width: 100%;
     text-align: left;
-    border: none;
-    background: #efefef;
-    // border: 1px solid $cyan;
     border-radius: 3px;
-    // text-shadow: 0 1px rgba(0,0,0,.1);
-
 }
 
 .emoji_completions > li > button:hover {
-            background: $cyan;
-            color: $white;
+            background-color: var(--panel-item-active-background-color);
 }
 .emoji_completions > li > button:focus {
-            background: $cyan;
-            outline: none;
-            color: $white;
+            background-color: var(--panel-item-active-background-color);
 }
-.emoji_completions>li>button.emoji-active{background:red;background:#2d9ee0;outline:none;color:#fff}
+.emoji_completions>li>button.emoji-active{
+            background-color: var(--panel-item-active-background-color);
+}
 .emoji_completions > li > button > .matched {
             font-weight: bold;
 }
 .emoji_completions > li > button > * {
-            vertical-align: middle;
+    vertical-align: middle;
+    line-height: 24px;
 }
 
 .ico {
@@ -305,7 +314,7 @@ button.ql-table[value="append-col"]::after { content: "COLS+"; }
 }
 
 .button-emoji {
-  margin-bottom: -5px;
+  margin-right: 10px;
 }
 
 .ql-emojiblot {
